Added pagination to the get senotypes endpoint
